# semantic-release

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md
.github/workflows/: ci.yml  package.yml  release.yml
Dockerfiles/: x86_64-unknown-linux-gnu
src/: commands.rs  lib.rs  main.rs  test_utils.rs  utils.rs
src/core/: bump.rs  changelog.rs  mod.rs  notes.rs  version.rs
src/languages/: mod.rs  python.rs  rust.rs
tests/: integration.rs
