[package]
name = "semantic-release"
version = "0.1.6"
authors = ["Tom Howard <info@tomhoward.codes>"]
edition = "2018"

[dependencies]
regex = "1.3.5"
structopt = "0.3.11"
semver = "0.9.0"
toml_edit = "0.1.5"
git2 = {version="0.15.0", features=["vendored-openssl"]}
log = "^0.4.0"
simple_logger = "^1.6.0"
openssl = {version = "0.10", features = ["vendored"]}

[dev-dependencies]
tempfile = "*"
